--- a/data-viz/inclass-infographics.html
+++ b/data-viz/inclass-infographics.html
@@ -185,7 +185,7 @@
             onmouseout: function (d, i) { console.log("onmouseout", d, i); }
           },
           color: {
-            pattern: ['#2a8dc5', '#455380', '#ee6a4b', '#60c4b2', '#973895']
+            pattern: ['#4b4f1d', '#455380', '#ee6a4b', '#60c4b2', '#0dffa7']
           }
         });
 
