--- a/final-project/index.html
+++ b/final-project/index.html
@@ -70,7 +70,7 @@
   <center><img src="images/juice.jpg" alt="green juice" class="hero-image"></center>
   <p class="caption"> Some fad diets focus on juice. Photo from Courtney Boyd Myers via Flickr</p>
 
-  <p class="subhead">Are diet trends effective and, more importantly, healthy?</p>
+  <p class="subhead">Are diet healthy and effective?</p>
   <p class="date"> May 13, 2019
   <p class="byline">By Talia Dennis</p>
 
@@ -91,7 +91,7 @@
 
   <p class="text-info"> Fad diets are popular eating trends many people in the United States try at one time or another and Nevada Shannahan, a California Polytechnic State University junior, is no exception. The history major has tried three so far and is interested in trying others. The diets are often met with skepticism and critiques because limitations or restrictions of food groups is usually required to properly follow the guidelines. </p>
 
-  <p class="text-info">From the 1990s to 2009 the U.S. Department of Agriculture used a food pyramid to educated the public about the types and amounts of food an average person should consume in a day to maintain a healthy diet. Since 2011, the USDA has used MyPlate to convey nutritional standards. It is a diagram of a plate and cup and shows how much of each food group should be consumed.</p>
+  <p class="text-info">From the 1990s to 2009 the <a href="https://www.choosemyplate.gov/brief-history-usda-food-guides" target="_blank">U.S. Department of Agriculture</a>, used a food pyramid to educated the public about the types and amounts of food an average person should consume in a day to maintain a healthy diet. Since 2011, the USDA has used MyPlate to convey nutritional standards. It is a diagram of a plate and cup and shows how much of each food group should be consumed.</p>
 
 <br><br>
 <!-- Pie Chart amount to each each day -->
@@ -106,7 +106,7 @@
 <!-- END Pie Chart-->
 <br><br>
 
-  <p class="text-info"> The current diet makeup recommendation, based on a 2,000 calorie diet – a standard most food labels also go by – is 28 percent for vegetables, 22.5 percent for fruits, 7.9 percent for grains, 7.6 percent for protein, 33.9 percent for dairy and 0.02 percent for a blend of saturated fats and added sugars. </p>
+  <p class="text-info"> The current diet makeup recommendation, based on a <a href="https://www.choosemyplate.gov/MyPlatePlan_2000cals_Age14plus" target="_blank">2,000 calorie diet</a> – a standard most food labels also go by – is 28 percent for vegetables, 22.5 percent for fruits, 7.9 percent for grains, 7.6 percent for protein, 33.9 percent for dairy and 0.02 percent for a blend of saturated fats and added sugars. </p>
 </div>
 
 <div class="row">
@@ -120,9 +120,16 @@
 
   <p class="text-info">“I started the summer after I graduated high school with the pescatarian diet because my girlfriend at the time didn’t eat red meat,” the history major said.</p>
 
-  <p class="text-info">The diet is similar to vegetarianism but some meat – only seafood – is permitted. One of the biggest concerns surrounding any diet deviating from the government recommended option is getting enough nutrients. Vegetarianism nearly eliminates many protein sources because it prohibits the consumption of meat. Nuts, seeds and soy products are acceptable alternatives, but to equal the amount of protein in a 3 oz. skinless, boneless chicken breast, a person would have to consume 3.5 servings of almonds – or about 80 almonds. However, 3.5 servings of almonds is nearly four times the calories as the 3 oz. chicken breast. </p>
+<p class="text-info">The diet is similar to vegetarianism but some meat – only seafood – is permitted. One of the biggest concerns surrounding any diet deviating from the government recommended option is getting enough nutrients. Vegetarianism nearly eliminates many protein sources because it prohibits the consumption of meat.</p>
 
-  <p class="text-info"> The pescatarian diet is more ideal because it allows the daily amount of protein to be consumed through meats with healthy fats like omega-3, according to University Health News. These fats are linked to good cardiovascular health and decreased chances of developing diabetes, cancer and Alzheimer's disease. Eliminating red meat likely reduces saturated fat intake – a bad fat – which is connected to health problems. </p>
+  <center><figure>
+    <img src="images/almonds.jpg" alt="almonds" class="hero-image">
+    <figcaption> Eighty almonds equal the same amount of protein in a 3 oz. chicken breast. Photo from Wikipedia</figcaption>
+  </figure></center>
+
+  <p class="text-info"> Nuts, seeds and soy products are acceptable alternatives, but to equal the amount of protein in a 3 oz. skinless, boneless chicken breast, a person would have to consume 3.5 servings of almonds – or about 80 almonds. However, 3.5 servings of almonds is nearly four times the calories as the 3 oz. chicken breast. </p>
+
+  <p class="text-info"> The pescatarian diet is more ideal because it allows the daily amount of protein to be consumed through meats with healthy fats like omega-3, according to <a href="https://universityhealthnews.com/daily/nutrition/considering-pescetarian-diet-heres-may-good-idea/" target="_blank">University Health News</a>. These fats are linked to good cardiovascular health and decreased chances of developing diabetes, cancer and Alzheimer's disease. Eliminating red meat likely reduces saturated fat intake – a bad fat – which is connected to health problems. </p>
 
   <p class="text-info">“I liked it,” Shannahan said. “I didn’t see too many results…But I liked making things for myself.”</p>
 
@@ -137,19 +144,21 @@
 
   <p class="text-info">The 21-year-old said the following year he tried the paleo diet — a diet known to mimic the foods early humans ate during the Paleolithic era. The diet ranges from strict adherence like grass-fed meat or organic products to more leniency that can be more cost efficient for a college student, like Shannahan.</p>
 
-  <p class="text-info">Typically the paleo diet consists of lean meats, fish, fruits, vegetables, nuts and seeds. From the food pyramid it omits grains, dairy products and refined sugar. Adhering to this diet also means giving up legumes — think beans, lentils, peanuts and peas — refined sugar, highly processed foods, salt and potatoes, according to the Mayo Clinic.</p>
+  <p class="text-info">Typically the paleo diet consists of lean meats, fish, fruits, vegetables, nuts and seeds. From the food pyramid it omits grains, dairy products and refined sugar. Adhering to this diet also means giving up legumes — think beans, lentils, peanuts and peas — refined sugar, highly processed foods, salt and potatoes, according to the <a href="https://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/paleo-diet/art-20111182" target="_blank">Mayo Clinic</a>.</p>
 
   <p class="text-info">“I’ve never been more fit,” Shannahan said. “I’ve never been able to think more clearly…I saw results immediately”</p>
 
-  <p class="text-info"> Brief clinical trials show the following the paleo diet can lead to better blood pressure, blood sugar tolerance, appetite management, additional weight loss and decreased fat in the blood that is later stored in fat cells, according to the Mayo Clinic. </p>
+  <p class="text-info"> Brief clinical trials show the following the paleo diet can lead to better blood pressure, blood sugar tolerance, appetite management, additional weight loss and decreased fat in the blood that is later stored in fat cells, according to the Mayo Clinic.</p>
 
-  <p class="text-info">Shannahan said he was inspired to try the diet after hearing a podcaster recommend it. The paleo diet claims to only entail foods early humans ate because present people are still genetically built to consume foods that could be farmed or hunted without pestacides and other chemicals influencing growth. The modern diet requires the consumption of foods the body is not meant to eat – leading to obesity, diabetes and heart disease – according to the diet. </p>
+  <blockquote> "I guess it's kind of like rehab" – Nevada Shannahan</blockquote>
+
+  <p class="text-info">Shannahan said he was inspired to try the diet after hearing a podcaster recommend it. The paleo diet claims to only entail foods early humans ate because present people are still genetically built to consume foods that could be farmed or hunted without pesticides and other chemicals influencing growth. The modern diet requires the consumption of foods the body is not meant to eat – leading to obesity, diabetes and heart disease – according to the diet. </p>
 
   <p class="text-info">“I wanted to try it out for a week and then a month,” he said. “It ended up being whole summer.”</p>
 
   <p class="text-info">Research on Paleolithic nutrition was first conducted in 1975. It was not until 2002 that the diet was popular. It saw a resurgence in 2014 and has maintained popularity since then.</p>
 
-  <p class="text-info"> In 2017 the International Food Information Council Foundation found that among the surveyed Americans who followed a diet that year, the diet was the second-most popular.</p>
+  <p class="text-info"> In 2017 the <a href="https://www.foodinsight.org/2018-food-health-press-release-diets-organic-natural-sustainable-trending" target="_blank">International Food Information Council Foundation</a> found that among the surveyed Americans who followed a diet that year, the diet was the second-most popular.</p>
 
   <!-- Bar Graph on diet types -->
 
@@ -167,11 +176,11 @@
 
   <p class="text-info">“I prefer diets where things are either allowed or not allowed,” he said. “I have more self-control when can say I can eat that thing or not. There’s no temptation to have it sometimes…I guess it’s kind of like rehab.”</p>
 
-  <p class="text-info"> Paleo diet critics claim it the diet is not healthy or sustainable because it eliminates an two food groups – carbobhydrates and dairy – which offer essential nutrients, vitamins and is a good source of fiber and protein.</p>
+  <p class="text-info"> Paleo diet critics claim it the diet is not healthy or sustainable because it eliminates two food groups – carbohydrates and dairy – which offer essential nutrients, vitamins and is a good source of fiber and protein.</p>
 
   <p class="text-info"> According to the Mayo Clinic long-term clinical studies have not been conducted on the official benefits and drawbacks of following the paleo diet. It could aid in losing or maintaining weight, but a healthy, balanced diet combined with sufficient exercise may also accomplish this.  </p>
 
-  <p class="text-info">Shannahan said he’d try the paleo diet again and during the school year because he enjoyed it so much. However, he said he is unable to do that just yet because of the cost. While eating in accordance to the Paleo diet is more expensive, he said the time cost is a bigger factor. Because highly-processed foods are off-limits, food cannot just be pulled from the box or can it came in and cooked in the microwave.</p>
+  <p class="text-info">Shannahan said he’d try the paleo diet again and during the school year because he enjoyed it so much. However, he said he is unable to do that just yet because of the cost. While eating in accordance to the paleo diet is more expensive, he said the time cost is a bigger factor. Because highly-processed foods are off-limits, food cannot just be pulled from the box or can it came in and cooked in the microwave.</p>
 
   <p class="text-info">He said he would spend his Sundays making six lunches and dinners for the week. During the school year, he doesn’t have the time necessary to meal-prep because of homework and his job.</p>
 
@@ -191,11 +200,20 @@
 
 <p class="text-info">The diet typically focuses on the consumption of plant-based foods, very little red meat but getting a lot of protein from chicken and fish, and swapping fats like butter for healthy oils. It is similar to the pescatarian diet due to the minimal consumption of red meat and allows foods from every group recommended by the USDA.</p>
 
-<p class="text-info">Shannahan said his favorite snack was a piece of toast with mozzarella, olive oil, salt and pepper. On both diets he said he was also able to enjoyed popcorn if it was unsalted and cooked with the right kind of oil.</p>
+<p class="text-info">Shannahan said his favorite snack was a piece of toast with mozzarella, olive oil, salt and pepper. On both diets he said he was also able to enjoyed popcorn if it was unsalted and cooked with the right kind of oil. </p>
 
-<p class="text-info"> Doctors have recommended the Mediterranean diet to some heart disease or high blood pressure patients, according to the public health school at Harvard University. Permitting all food groups, reducing red meat intake, encouraging seafood consumption and trading bad fats for good alternatives can lower bad cholesterol. The same Harvard health review noted the key aspects of the diet should be done in combination, rather than picking and choosing elements as the health benefits are significantly greater. </p>
+            <img src="images/popcorn.jpg" class="story-pic" style="margin-left:40px;">
+            <img src="images/med.JPG" class="story-pic" style="margin-left:75px;">
+            <p class="caption-story" style="margin-left: 40px;"> Unsalted popcorn cooked in a a healthy oil is a good snack for paleo and Mediterranean diets. Photo from Pixabay</p>
+            <p class="caption-story" style="margin-left:75px;"> Sample of foods typically eaten while following the Mediterranean diet. Photo from Wikipedia</p>
 
-<p class="text-info"> While the Mediterranean diet gets rave reviews there are some drawbacks. As Shannahan discovered the diet does not restrict types of foods and mainly promotes eating certain amounts of various healthy foods.  </p>
+
+<p class="text-info"> Doctors have recommended the Mediterranean diet to some heart disease or high blood pressure patients, according to the public health school at <a href="https://www.hsph.harvard.edu/nutritionsource/healthy-weight/diet-reviews/mediterranean-diet/" target="_blank">Harvard University</a>. Permitting all food groups, reducing red meat intake, encouraging seafood consumption and trading bad fats for good alternatives can lower bad cholesterol. The same Harvard health review noted the key aspects of the diet should be done in combination, rather than picking and choosing elements as the health benefits are significantly greater.</p>
+
+<p class="text-info"> While the Mediterranean diet gets rave reviews there are some drawbacks. As Shannahan discovered the diet does not restrict types of foods and mainly promotes eating certain amounts of various healthy foods. If portioning food without restrictions is easier for someone there is still a major pitfall. The diet does not call for strict measurements of food, like ounces or grams, instead it instructs followers to have "moderate" or "abundant" consumption of food. According to <a href="https://www.livestrong.com/article/249069-pros-cons-of-the-mediterranean-diet/" target="_blank">Livestrong</a>, the vague instructions can make the diet difficult to follow and lead to weight gain instead of loss because caloric intake is not controlled on the diet.</p>
+
+
+<p class="text-info"> The portion control made the Mediterranean diet more challenging Shannahan said. At the beginning of the diet, he said he had more confidence than when he started the paleo diet just nine months earlier. He said he assumed he could "handle [the Mediterranean diet]" because he was on the restrictive paleo diet and the Mediterranean diet allowed him to eat "a variety of things at different degrees. The Mediterranean diet is his least favorite diet he's tried, but he said he is interested in trying other fad diets in the future. </p>
 
 
 </div>
@@ -208,7 +226,26 @@
     <br>
 
 
-<p class="text-info">While he may not have the time to start the Paleo diet again just yet, Shannahan is interested in trying other diets as well. He named intermittent fasting as being one he was most curious about because Terry Cruz talked about it and made it interesting he said. Shannahan also said he wants to try veganism but does not see it happening any time soon.</p>
+<p class="text-info"> The next diet Shannahan saidi he wants to try is intermittent fasting – the most-followed diet in 2017 from the surveyed IFIC's study. Terry Crews talked about the diet and and made it interesting to him he said.</p>
+
+<p class="text-info"> Intermittent fasting does not dictate the types of foods consumed, but controls when someone can eat. There are different programs to follow for the diet and when eating is permitted, it is advised a healthy diet is maintained for it to be most effective. Some research shows the diet is effective for weight loss and is perfectly healthy, but it is not good for everyone – like those with a history of eating disorders.</p>
+
+<div class="row">
+    <div class="col-md-4">
+      <img src="images/food.jpeg" alt="mixed food" class="story-pic">
+      <p class="caption-story"> Balance is important for a healthy fad diet.</p>
+    </div>
+
+    <div class="col-md-8">
+      <p class="text-info"> The last two centuries show many diets thrust into brief popularity may be effective for weight loss but are not always healthy. Diets that heavily restrict nutrients and other vitamins are criticized more. However, the Mediterranean and pescatarian diets are praised by many experts because they incorporate all food groups and encourages a balanced diet. This does not mean the paleo diet is not healthy, just more research needs to be conducted and nutrients lost by not consuming grains should be made up elsewhere.</p>
+
+      <p class="text-info"> It is crucial to do research on a new diet before starting it because not all fad diets are appropiate for everyone.</p>
+    </div>
+  </div>
+
+  <br>
+  <br>
+<p class="text-info">The Mediterranean diet is best for someone with heart issues so someone not predisposed to a related condition may not reap as many of the benefits as someone whose doctor recommended it. Fad diets can be healthy lifestyle choices, it just depends on the diet and the rules it sets.</p>
 
 <br>
 
